# old-eyre

./: Cargo.toml  README.md  rustfmt.toml
src/: context.rs  lib.rs  report.rs
tests/: happy.rs
