[package]
name = "jane-err"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adhocerr = "0.1.2"
workingtitle = { path = "/home/jlusby/git/rust/workingtitle" }
tracing-error = { path = "/home/jlusby/git/rust/tracing/tracing-error" }
